3.0/竞赛小车工程总说明书.md
# STM32F103C8T6 + K230 智能循迹识别小车工程总说明书 v2.0

> **文件状态：** v2.0 正式版（全面审查通过，实地测试完美）
> **更新日期：** 2026-05-17
> **适用竞赛：** 2026全国大学生电子设计竞赛模拟电子系统设计专题赛（TI）杯校赛 — G题「智能识别小车」
> **适用工具：** Cursor、VS Code、STM32CubeMX、Keil MDK

---

## 0. 文档使用约定

- 本文是**工程总说明书**，所有硬件定义、引脚映射、模块分工、软件架构、算法设计均以此为准。
- 使用 Cursor / Claude 生成代码时，**先让 AI 完整阅读本文**，再下达编程指令。
- 代码已实现部分以「完成」标注；尚未实现或待测试部分以「待验证」标注。
- 如果后续发现实物与本文有出入，**以实物为准并同步更新本文**。

---

## 1. 项目概述

### 1.1 比赛任务详细说明

#### 赛道与场地

- **赛道形状**：圆形赛道，直径约 100cm（胶布铺设）
- **小车尺寸限制**：长 ≤ 25cm，宽 ≤ 15cm
- **禁止事项**：禁止遥控、禁止外挂供电

#### 基础部分（B题）

| 步骤 | 描述 |
|------|------|
| 1 | 小车从起点出发，沿黑线循迹行驶 |
| 2 | 黑线上放置若干张扑克牌，**背面朝上**（灰度传感器检测为大面积白场，视为遮线） |
| 3 | 小车压制扑克牌稳定行驶，**不因扑克牌遮线而失控或停车** |
| 4 | 行驶**一圈**后自动停车 |
| 5 | OLED 显示行驶里程（cm）和用时（秒） |

#### 发挥部分（F题）

| 步骤 | 描述 |
|------|------|
| 1 | 小车从起点出发，沿黑线循迹行驶 |
| 2 | 黑线外侧（圆环外侧地面）放置若干张扑克牌，**正面朝上**（K230 摄像头识别） |
| 3 | 扑克牌数量：1~3张（扩展方案1~5张），花色和点数随机 |
| 4 | 小车行进途中，K230 摄像头实时识别扑克牌，LCD 屏幕显示识别结果（中文花色 + 点数） |
| 5 | 行驶**一圈**后停车，LCD 显示最终识别结果 |

#### 扑克牌放置方式

| 类型 | 放置位置 | 朝向 | 检测方式 | 处理 |
|------|----------|------|----------|------|
| 基础题扑克牌 | 黑线正上方 | 背面朝上 | 灰度传感器（全白场/遮线） | 丢线保护 + 遮线保持角度 |
| 发挥题扑克牌 | 黑线外侧地面 | 正面朝上 | K230 摄像头（AI识别） | K230 算法识别 |

#### 关键设计考量

- **圆形赛道**：路径不是直线，遮线时必须保持原有转向角度沿圆弧行进，否则会偏离轨道
- **K230 识别**：小车行进中摄像头角度不断变化，光照不均，需要多帧投票稳定识别
- **STM32 ↔ K230 串口**：仅负责控制开始（START）和停止（STOP），不承载识别结果数据

### 1.2 完成度总览

#### 基本部分

| 序号 | 要求内容 | 代码文件 | 完成度 |
|------|----------|----------|--------|
| B-1 | 循迹行驶（黑线引导，直径100cm圆环） | `app_line.c` | **已完成** |
| B-2 | 压制扑克牌（背面朝上）稳定行驶 | `app_line.c`（丢线保护 + 遮线保持角度） | **已完成** |
| B-3 | 一圈自动停车 | `app_line.c`（编码器累加 ONE_LAP_COUNT） | **已完成** |
| B-4 | OLED 显示里程和用时 | `bsp_oled.c` | **已完成** |
| B-5 | 按键操作（K1切换模式/K2切题/K3启动/K4停车） | `user_main.c` | **已完成** |
| B-6 | 两套 PID 参数组（B题/F题独立可调） | `app_line.c` | **已完成** |
| B-7 | 声光提示（蜂鸣器 + LED） | `bsp_beep.c`、`bsp_led.c` | **已完成** |

#### 发挥部分

| 序号 | 要求内容 | 代码文件 | 完成度 |
|------|----------|----------|--------|
| F-1 | K230 扑克牌正面识别（55类：BLANK+54牌） | `K230/main.py` | **已完成**（算法v16，保留JOKER优化） |
| F-2 | STM32 → K230 串口控制（START/STOP） | `bsp_uart_k230.c` | **已完成** |
| F-3 | F题流程（一圈停车 + K230 停止识别） | `app_line.c` | **已完成** |
| F-4 | K230 LCD 屏幕中文显示识别结果 | `K230/main.py` | **已完成** |
| F-5 | K230 开机预热 + 冷却期防误识别 | `K230/main.py`（StabilityStateMachine） | **已完成** |

#### 未在代码中实现的功能

| 序号 | 功能 | 说明 | 优先级 |
|------|------|------|--------|
| N-1 | K230 LCD 识别结果展示优化 | 当前为白屏打印文字，可扩展为更美观的界面 | 低 |

### 1.3 整车实物状态（截至 2026-05）

| 检查项 | 状态 | 备注 |
|--------|------|------|
| PCB 主板 | 已焊接完成 | |
| STM32F103C8T6 蓝板 | 已插入主板 | |
| K230 模组 | 已安装，摄像头正常 | |
| TB6612 电机驱动 | 已焊接，VM 飞线接12V | |
| 灰度传感器（感为8路） | 已安装车头下方 | 支持按键自动校准阈值 |
| 编码电机 ×2 | 已装车 | |
| OLED 小屏 | 已连接 | |
| 蜂鸣器 | 已连接 | |
| 按键 ×4 | 已连接（K1~K4） | |
| LED（PC13） | 已连接 | |
| 电池 | 已固定于车体后方 | |

### 1.4 核心开发原则

```
第一阶段：STM32 底盘独立跑通（灰度循迹 + 电机 + 编码器）
第二阶段：K230 独立识别跑通（屏幕显示结果）
第三阶段：串口联调，识别结果驱动状态机
```

---

## 2. 硬件架构

### 2.1 模块职责

| 模块 | 职责 | 代码文件 |
|------|------|----------|
| **STM32F103C8T6** | 底盘实时控制（电机、编码器、灰度循迹、状态机、串口通信） | `app_*.c` |
| **K230** | 图像识别（扑克牌55类分类）、LCD屏幕中文显示识别结果 | `main.py` |
| **TB6612** | 双电机 H 桥驱动 | `bsp_motor.c` |
| **灰度模块（感为）** | 8路循迹黑线检测，支持按键自动校准 | `bsp_gray.c` |
| **编码电机 ×2** | 速度与里程反馈（TIM3/TIM4编码器） | `bsp_encoder.c` |
| **OLED（128×64）** | STM32 状态显示、调试信息、识别结果 | `bsp_oled.c` |
| **4 按键** | 模式切换、启动/停止、校准触发 | `bsp_key.c` |
| **蜂鸣器** | 状态提示（上电/一圈提示/完成） | `bsp_beep.c` |
| **LED（PC13）** | 竞赛指示灯，一圈提示 | `bsp_led.c` |

### 2.2 电源系统

```
电池 12V（XT60 输入）
├── 飞线 ──→ TB6612 VM（电机电源 12V）
│
└── AJ38 降压模块 ──→ 5V
    │
    └── 电源开关 ──→ 主板 5V 总线
        ├── STM32（经板载 3.3V LDO）
        ├── TB6612 VCC + STBY
        ├── OLED
        ├── 灰度传感器
        └── 蜂鸣器
```

### 2.3 引脚映射总表

#### 电机与编码器

| 功能 | STM32 引脚 | 外设 | 连接 |
|------|-----------|------|------|
| 左电机 PWM | PA0 | TIM2_CH1 | TB6612 PWMA |
| 右电机 PWM | PA1 | TIM2_CH2 | TB6612 PWMB |
| 左电机方向1 | PB12 | GPIO Out | TB6612 AIN1 |
| 左电机方向2 | PB13 | GPIO Out | TB6612 AIN2 |
| 右电机方向1 | PB14 | GPIO Out | TB6612 BIN1 |
| 右电机方向2 | PB15 | GPIO Out | TB6612 BIN2 |
| 左编码器 A | PA6 | TIM3_CH1 | 左电机 E1A |
| 左编码器 B | PA7 | TIM3_CH2 | 左电机 E1B |
| 右编码器 A | PB6 | TIM4_CH1 | 右电机 E2A |
| 右编码器 B | PB7 | TIM4_CH2 | 右电机 E2B |

**电机方向（前进）：**

| 电机 | IN1 | IN2 |
|------|-----|-----|
| 左（U10） | 1 | 0 |
| 右（U11） | 1 | 0 |

- 停止（滑行）：IN1=0, IN2=0
- 刹车：IN1=1, IN2=1

#### 按键

| 按键 | 引脚 | 按下电平 |
|------|------|----------|
| K1 | PB1 | 0 |
| K2 | PB0 | 0 |
| K3 | PB10 | 0 |
| K4 | PB11 | 0 |

#### 蜂鸣器与 LED

| 功能 | 引脚 |
|------|------|
| BEEP | PB3 |
| LED | PC13 |

#### I2C 总线

| 功能 | 引脚 | 说明 |
|------|------|------|
| I2C1_SCL | PB8（Remap） | OLED 总线 |
| I2C1_SDA | PB9（Remap） | OLED 总线 |
| PA4 | Analog | 灰度传感器 SDA（高阻） |
| PA5 | Analog | 灰度传感器 SCL（高阻） |

> **注意：** PA4/PA5 配置为高阻输入/模拟模式，不主动驱动，避免干扰 PB8/PB9 的 OLED 通信。

#### 串口（调试 + K230）

| 功能 | 引脚 | 说明 |
|------|------|------|
| USART1_TX | PA9 | 接调试器和 K230 RX |
| USART1_RX | PA10 | 接调试器和 K230 TX |

### 2.4 STM32CubeMX 配置摘要

| 配置项 | 值 |
|--------|-----|
| MCU | STM32F103C8Tx |
| Debug | **Serial Wire**（关闭JTAG，释放PB3） |
| SYSCLK | **72 MHz**（HSE×9） |
| APB1 | 36 MHz（TIM2/3/4） |
| APB2 | 72 MHz |
| TIM2 PWM | PA0/PA1，20 kHz，ARR=3599 |
| TIM3/TIM4 | 编码器模式，4倍频 |
| I2C1 | PB8/PB9 Remap，100 kHz |
| USART1 | 115200，8N1 |

---

## 3. 软件工程结构

### 3.1 目录树

```
d:\code\code\competition\电赛\26年校赛\1.2\
├── stm32/
│   ├── Core/
│   │   ├── Inc/
│   │   │   ├── user_config.h          ← 所有硬件宏定义汇总
│   │   │   ├── app_state.h            ← 状态机类型定义
│   │   │   ├── app_control.h         ← 电机控制接口
│   │   │   ├── app_line.h             ← 循迹算法接口
│   │   │   ├── bsp_motor.h           ← 电机驱动接口
│   │   │   ├── bsp_encoder.h         ← 编码器接口
│   │   │   ├── bsp_gray.h            ← 灰度传感器接口
│   │   │   ├── bsp_key.h             ← 按键接口
│   │   │   ├── bsp_beep.h           ← 蜂鸣器接口
│   │   │   ├── bsp_led.h            ← LED接口
│   │   │   ├── bsp_oled.h            ← OLED显示接口
│   │   │   ├── bsp_uart_k230.h       ← K230串口接口
│   │   │   ├── bsp_delay.h          ← 延时接口
│   │   │   └── user_main.h          ← 用户入口接口
│   │   └── Src/
│   │       ├── main.c                ← CubeMX生成，User Code区域调用
│   │       ├── user_main.c           ← 用户初始化/主循环入口
│   │       ├── app_state.c           ← 系统状态机
│   │       ├── app_control.c         ← 电机控制调度
│   │       ├── app_line.c            ← 黑线循迹核心算法
│   │       ├── bsp_motor.c           ← TB6612电机驱动
│   │       ├── bsp_encoder.c         ← 编码器计数
│   │       ├── bsp_gray.c           ← 8路灰度I2C读取
│   │       ├── bsp_key.c            ← 4按键扫描
│   │       ├── bsp_beep.c           ← 蜂鸣器控制
│   │       ├── bsp_led.c            ← LED控制
│   │       ├── bsp_oled.c           ← OLED显示（3页面）
│   │       ├── bsp_uart_k230.c      ← K230串口通信
│   │       ├── bsp_delay.c          ← 微秒/毫秒延时
│   │       ├── gpio.c / tim.c / usart.c / i2c.c ← CubeMX生成
│   │       └── stm32f1xx_it.c       ← 中断处理
│   └── MDK-ARM/                      ← Keil工程文件
└── K230/
    ├── main.py                       ← 扑克牌识别主程序（v16算法，保留JOKER优化）
    └── 09_1数据收集.py               ← 训练数据采集脚本
```

### 3.2 软件分层

```
┌─────────────────────────────────────┐
│          user_main.c               │  ← 入口：初始化 + 主循环调度
├─────────────────────────────────────┤
│  app_control.c  │  app_line.c  │   │  ← APP层：状态机/循迹/任务调度
│  app_state.c                            │
├─────────────────────────────────────┤
│ bsp_motor │ bsp_encoder │ bsp_gray │     │  ← BSP层：直接操作硬件
│ bsp_key   │ bsp_beep    │ bsp_oled │     │
│ bsp_uart_k230 │ bsp_delay │ bsp_led │    │
├─────────────────────────────────────┤
│         main.c (CubeMX)           │  ← CubeMX层：HAL初始化/中断
└─────────────────────────────────────┘
```

**分层原则：**
- `main.c` 只在 USER CODE 区域调用 `User_App_Init()` 和 `User_App_Loop()`
- BSP 层只操作硬件寄存器，不涉及业务逻辑
- APP 层负责状态机、循迹算法、任务调度、参数管理
- 所有硬件宏定义集中在 `user_config.h`

### 3.3 文件功能一览

| 文件 | 行数 | 功能描述 |
|------|------|----------|
| `app_state.c` | ~45 | 系统状态机（IDLE/READY/RUNNING/ERROR/FINISHED），题目类型管理（B题/F题） |
| `app_control.c` | ~46 | 电机控制调度，RUNNING时调用循迹任务，非RUNNING时停止电机 |
| `app_line.c` | ~586 | **核心文件**：黑线循迹PID、丢线保护、编码器计数、声光提示、一圈停车 |
| `bsp_motor.c` | — | TB6612双电机驱动，支持正转/反转/滑行/刹车 |
| `bsp_encoder.c` | — | TIM3/TIM4编码器计数，支持增量读取和清零 |
| `bsp_gray.c` | — | 感为8路灰度I2C驱动（软件模拟I2C，PA5=SCK/PA4=SDA），支持ping/数字量/模拟量读取 |
| `bsp_key.c` | — | 4按键扫描（K1~K4），支持单击去抖 |
| `bsp_beep.c` | — | 蜂鸣器控制，支持阻塞响铃 |
| `bsp_led.c` | — | LED控制（PC13） |
| `bsp_oled.c` | — | OLED显示，1个页面（待机页），100ms刷新 |
| `bsp_uart_k230.c` | ~120 | STM32与K230串口通信，发送START/STOP命令，控制K230识别开始/停止 |
| `bsp_delay.c` | — | 微秒/毫秒延时（基于DWT） |
| `user_main.c` | ~110 | 系统初始化，按键处理（K1切换模式/K2切题/K3启动/K4停车） |
| `K230/main.py` | ~684 | K230扑克牌识别，PipeLine框架，55类分类，算法v16（保留JOKER优化） |

---

## 4. BSP 驱动层详解

### 4.1 电机驱动 — `bsp_motor.c`

基于 TB6612 双 H 桥驱动芯片。

**引脚：**

| 信号 | 引脚 |
|------|------|
| PWMA（左轮） | PA0 (TIM2_CH1) |
| PWMB（右轮） | PA1 (TIM2_CH2) |
| AIN1/2（左轮方向） | PB12/PB13 |
| BIN1/2（右轮方向） | PB14/PB15 |

**PWM 配置：** 频率 20 kHz（ARR=3599），脉宽 0~3599。

**API：**

| 函数 | 说明 |
|------|------|
| `BSP_Motor_Init()` | 初始化，PWM=0，方向=0 |
| `BSP_Motor_Set(int16_t left, int16_t right)` | 设置左右轮PWM（负值反转） |
| `BSP_Motor_Stop()` | 滑行停止（IN1=0, IN2=0） |
| `BSP_Motor_Brake()` | 刹车（IN1=1, IN2=1） |
| `BSP_Motor_Forward(int16_t pwm)` | 两轮同速前进 |
| `BSP_Motor_Backward(int16_t pwm)` | 两轮同速后退 |

### 4.2 编码器驱动 — `bsp_encoder.c`

使用 TIM3（PA6/PA7）和 TIM4（PB6/PB7）编码器模式，4倍频。

**关键参数（`user_config.h`）：**

| 宏 | 值 | 说明 |
|----|---|------|
| `ONE_LAP_COUNT` | 43000 | 一圈目标编码器累计值 |
| `LEFT_ENCODER_DIR` | -1 | 左轮编码器方向修正 |
| `RIGHT_ENCODER_DIR` | 1 | 右轮方向修正 |
| `ENC_TOTAL_MAX` | ONE_LAP_COUNT×4 | 防止溢出上限 |

**API：**

| 函数 | 说明 |
|------|------|
| `BSP_Encoder_Init()` | 初始化 TIM3/TIM4 编码器模式 |
| `BSP_Encoder_GetLeftDelta()` | 获取左轮增量计数（有方向） |
| `BSP_Encoder_GetRightDelta()` | 获取右轮增量计数（有方向） |
| `BSP_Encoder_Reset()` | 重置编码器计数值 |

### 4.3 灰度传感器驱动 — `bsp_gray.c`

使用软件模拟 I2C（不依赖硬件I2C），避免与 OLED 硬件 I2C 冲突。

**接线：** PA5=SCL，PA4=SDA（均配置为高阻/Analog）
**I2C 地址：** 0x4E（AD1=1, AD0=0）

**API：**

| 函数 | 说明 |
|------|------|
| `BSP_Gray_Init()` | 初始化软件I2C引脚 |
| `BSP_Gray_Ping()` | Ping设备，检测是否在线 |
| `BSP_Gray_GetDigital(uint8_t *val)` | 获取8路数字量（bit0=第1路最左，bit7=第8路最右）|
| `BSP_Gray_GetAnalog(uint8_t ch, uint16_t *val)` | 获取指定通道模拟量（0~4095）|
| `BSP_Gray_Calibrate()` | 触发按键校准 |

**digital 位含义：** bit=0 表示检测到黑场（黑线），bit=1 表示白场。

### 4.4 按键驱动 — `bsp_key.c`

| 按键 | 引脚 | 按下电平 |
|------|------|----------|
| K1 | PB1 | 低 |
| K2 | PB0 | 低 |
| K3 | PB10 | 低 |
| K4 | PB11 | 低 |

**API：**

| 函数 | 说明 |
|------|------|
| `BSP_Key_Init()` | 初始化按键GPIO（上拉输入） |
| `BSP_Key_Scan()` | 扫描所有按键，返回按下的键（消抖处理） |
| `BSP_Key_ScanPressed()` | 每调用一次返回最近一次按键，NULL表示无新按键 |

### 4.5 蜂鸣器驱动 — `bsp_beep.c`

**引脚：** PB3（关闭JTAG后可用）

**API：**

| 函数 | 说明 |
|------|------|
| `BSP_Beep_Init()` | 初始化GPIO（默认关闭） |
| `BSP_Beep_On()` | 打开蜂鸣器 |
| `BSP_Beep_Off()` | 关闭蜂鸣器 |
| `BSP_Beep_Blocking(uint16_t ms)` | 阻塞响铃指定毫秒 |

### 4.6 LED 驱动 — `bsp_led.c`

**引脚：** PC13（竞赛指示灯）

**API：**

| 函数 | 说明 |
|------|------|
| `BSP_LED_Init()` | 初始化GPIO |
| `BSP_LED_On()` | 点亮LED |
| `BSP_LED_Off()` | 关闭LED |

### 4.7 OLED 显示驱动 — `bsp_oled.c`

**硬件：** 128×64 OLED，硬件 I2C1（PB8=SCL, PB9=SDA），地址 0x78

**页面系统：**

| 页面 | 描述 |
|------|------|
| `OLED_PAGE_STANDBY` | 待机页：题目/模式、灰度二进制、运行时间、行驶距离、PWM |

**API：**

| 函数 | 说明 |
|------|------|
| `BSP_OLED_Init()` | 初始化OLED |
| `BSP_OLED_Task()` | 100ms周期刷新当前页面 |
| `BSP_OLED_SwitchPage(page)` | 切换页面 |
| `BSP_OLED_GetPage()` | 获取当前页面 |

### 4.8 K230 串口通信 — `bsp_uart_k230.c`

**硬件：** USART1，PA9=TX，PA10=RX，波特率 115200

**通信协议：**

| 方向 | 消息 | 说明 |
|------|------|------|
| STM32 → K230 | `0x01` | START，开始识别记录 |
| STM32 → K230 | `0x02` | STOP，停止识别记录 |
| K230 → STM32 | `0xA0` | 握手 |
| K230 → STM32 | `0xA1` | ACK START |
| K230 → STM32 | `0xA2` | ACK STOP |

**API：**

| 函数 | 说明 |
|------|------|
| `BSP_UART_K230_Init()` | 初始化缓冲区 |
| `BSP_UART_K230_SendStart()` | 发送 START 命令（0x01）|
| `BSP_UART_K230_SendStop()` | 发送 STOP 命令（0x02）|

### 4.9 延时驱动 — `bsp_delay.c`

基于 DWT（Data Watchpoint and Trace）CYCCNT 计数器，不依赖SysTick。

**API：**

| 函数 | 说明 |
|------|------|
| `Delay_Init()` | 初始化DWT |
| `Delay_Us(uint32_t us)` | 微秒延时 |
| `Delay_Ms(uint32_t ms)` | 毫秒延时 |

---

## 5. APP 应用层详解

### 5.1 系统状态机 — `app_state.c`

```
IDLE ──[上电]──→ READY ──[K3]──→ RUNNING ──[跑完]──→ FINISHED
  ↑                                           │
  └────────────[K4/ERROR]─────────────────────┘
```

**状态定义：**

| 状态 | 含义 |
|------|------|
| `APP_STATE_IDLE` | 初始状态 |
| `APP_STATE_READY` | 就绪，等待启动 |
| `APP_STATE_RUNNING` | 运行中，循迹中 |
| `APP_STATE_ERROR` | 错误（丢线超时） |
| `APP_STATE_FINISHED` | 完成（跑完目标圈数） |

**题目类型：**

| 类型 | 含义 | 行为 |
|------|------|------|
| `QUESTION_B` | 基础题 | 一圈后声光提示，再跑一圈（共两圈） |
| `QUESTION_F` | 挑战题（发挥题） | 一圈后停车，K230识别扑克牌 |

### 5.2 黑线循迹核心 — `app_line.c`

这是整个 STM32 工程最核心的文件，包含循迹算法、丢线保护、编码器一圈计数等。

#### 5.2.1 PID 参数配置

**参数扩大10倍存储**（`int16_t`），OLED显示时除以10，实现±0.1微调。

| 参数组 | BASE_PWM | KP | KI | KD |
|--------|----------|----|----|-----|
| B题（基础题，高速） | 1300 | 11.2 | 0.5 | 6.0 |
| F题（挑战题，低速） | 700 | 6.0 | 0.3 | 4.0 |

> 存储值分别为 1300/112/5/60 和 700/60/3/40。

#### 5.2.2 灰度权重设计

8路灰度传感器，权重（与前进方向相关）：

```
[-40, -28, -20, -15, +15, +20, +28, +40]
  ←  偏左（应左转修正）     偏右（应右转修正） →
```

**误差计算：** 加权平均法 — 找到所有检测到黑线的传感器（digital bit=0），计算权重平均值。

**误差含义：**
- `error < 0`：小车偏左 → 右转修正（减少左PWM，增加右PWM）
- `error > 0`：小车偏右 → 左转修正（增加左PWM，减少右PWM）

#### 5.2.3 PID 控制

```
PWM_out = Kp × error + Ki × integral + Kd × (error - last_error)
```

- **P项**：比例修正
- **I项**：积分消除稳态误差（`app_line.c` 中 `F_KI=3`，B题 `B_KI=5`）
- **D项**：微分抑制震荡

#### 5.2.4 丢线保护策略

| 丢线时长 | 策略 | 说明 |
|----------|------|------|
| < 150ms | 保持上一周期 error，直行 | 短暂丢线 |
| 150ms~300ms（持续白场） | 保持遮线前角度，沿圆弧行进 | **扑克牌遮线专用** |
| 300ms~500ms | 降速 50%~70%，保持方向找线 | 中等丢线 |
| > 600ms | 停车，进入 ERROR 状态 | 长时丢线 |

**扑克牌遮线处理（关键）：** 路径是圆形的，遮线时保持遮线前的偏转角度沿圆弧行进，而不是直行。`last_error` 在遮线期间不更新。

#### 5.2.5 一圈计数

使用编码器累加判定：`s_enc_total = |delta_L| + |delta_R|`

| 题目 | 目标值 | 行为 |
|------|--------|------|
| B题 | ONE_LAP_COUNT×2 | 第一圈完成 → 声光提示1秒 → 第二圈 → 停车 |
| F题 | ONE_LAP_COUNT | 第一圈完成 → 停车，同时发送 STOP 给 K230 |

**待验证：** `ONE_LAP_COUNT=43000` 为初始估算值，**需要实测标定**。让小车跑一圈，记录 OLED 显示的 enc_total 值，填入实际测量结果。

#### 5.2.6 声光提示

| 事件 | 蜂鸣器 | LED |
|------|--------|-----|
| 上电完成 | 80ms 响 | — |
| B题第一圈完成 | 长响 1 秒 | 亮 1 秒 |
| K3 按下（启动） | 30ms 响 | — |

### 5.3 电机控制调度 — `app_control.c`

```c
void App_Control_Task(void)
{
    if (App_State_Get() == APP_STATE_RUNNING)
        App_Line_Task();  // 执行循迹
    else
        BSP_Motor_Stop(); // 非运行状态停止电机
}
```

### 5.4 用户主入口 — `user_main.c`

**初始化顺序：** Delay → Beep → Key → LED → Motor → Encoder → Gray → OLED → UART → State → Control

**按键处理逻辑（无调参页，PID参数编译期固定，运行时仅切换稳定/竞赛模式）：**

| 按键 | 待机/完成/错误页 | 运行时 |
|------|-----------------|--------|
| K1 | 切换稳定模式(S) / 竞赛模式(C) | 无效 |
| K2 | 切换题目 B/F | 无效 |
| K3 | 启动 RUNNING | 无效 |
| K4 | 无效 | 手动停车 |

**F题启动时序：** K3按下 → `BSP_UART_K230_SendStart()` 发送0x01给K230 → K230开始识别记录 → 一圈完成 → `BSP_UART_K230_SendStop()` 发送0x02 → K230停止识别

**PID参数（编译期固定，OLED不提供运行时调参）：**

| 参数组 | BASE_PWM | KP | KI | KD |
|--------|----------|----|----|-----|
| B题竞赛(C) | 1300 | 11.2 | 0.5 | 6.0 |
| B题稳定(S) | 1000 | 8.5 | 0.5 | 4.5 |
| F题竞赛(C) | 700 | 6.0 | 0.3 | 4.0 |
| F题稳定(S) | 630 | 5.7 | 0.0 | 4.0 |

> K1 在待机页/完成页/错误页切换稳定模式(S)和竞赛模式(C)，OLED 第一行实时显示当前模式。

---

## 6. K230 扑克牌识别详解

### 6.1 硬件与框架

- **硬件：** CanMV K230 v1.6
- **软件框架：** PipeLine（通道0显示，通道2 AI推理）
- **分辨率：** 640×480（显示），224×224（AI输入）
- **分类数：** 55类（BLANK背景 + 54种扑克牌）

### 6.2 分类系统

| 类别 | 数量 | 标签格式 |
|------|------|----------|
| 空白/背景 | 1 | BLANK |
| 黑桃 | 13 | S_A ~ S_K |
| 红桃 | 13 | H_A ~ H_K |
| 梅花 | 13 | C_A ~ C_K |
| 方块 | 13 | D_A ~ D_K |
| 小王 | 1 | JOKER_B |
| 大王 | 1 | JOKER_R |

### 6.3 算法 v16 — 滑动窗口连续帧确认（回退版）

> **2026-05-17 回退说明**：v34 复杂算法（候选池加权积累、花色总和分析、7张难检牌优化等）测试成功率反而不如 v16 简单框架。回退至 v16 连续帧确认，同时保留 v28/v29 的小王相关优化。
>
> 核心目标：在小车行进晃动、角度变化、光照不均的条件下，通过连续帧确认稳定识别扑克牌。

#### 6.3.1 状态机

```
WARMUP ──[预热10帧]──→ TRACKING ──[连续3帧同牌]──→ COOLDOWN ──[冷却20帧]──→ TRACKING
```

- **WARMUP**：开机预热 10 帧，跳过不稳定帧
- **TRACKING**：每帧取 Top1，同一张牌连续出现达到 3 帧即确认
- **COOLDOWN**：确认后冷却 20 帧，防止同一张牌被重复识别。已确认的牌 idx 和 rank 在冷却期内被排除。冷却结束清空排除集合，准备识别下一张牌

#### 6.3.2 核心参数

| 参数 | 值 | 说明 |
|------|----|------|
| MIN_CONFIDENCE | 0.45 | 最低置信度门槛 |
| BLANK_GAP | 0.30 | Top1 必须比 BLANK 高至少此值 |
| TOP_GAP_THRESH | 0.12 | Top1 与 Top2 差距小于此值且 Top1<0.65 时降权（×0.7） |
| TOP1_NOISE_THRESH | 0.55 | Top1 低于此值视为弱识别 |
| CONSECUTIVE_THRESH | 3 | 同一张牌连续出现 N 帧确认 |
| COOLDOWN_FRAMES | 20 | 确认后冷却帧数 |
| WARMUP_FRAMES | 10 | 开机预热帧数 |
| JOKER_GAP_THRESH | 0.25 | S_A 与 JOKER 分差阈值，小于此值交换 softmax |
| JOKER_B_DETECT_MIN | 0.10 | JOKER_B 进入 Boost 的最低分值 |
| JOKER_B_BOOST_MULT | 1.3 | JOKER_B 分值 Boost 系数 |
| JOKER_B_MAX_GAP | 0.25 | Boost 后与 Top1 的最大允许差距 |

#### 6.3.3 算法核心模块

**1. 四关过滤（Recognizer.run）：**
- 第一关：Top1 是 BLANK → 丢弃整帧
- 第二关：Top1 与 BLANK 分差 < BLANK_GAP(0.30) → 丢弃
- 第三关：Top1 置信度 < MIN_CONFIDENCE(0.45) → 丢弃
- 第四关：Top1/Top2 分差 < TOP_GAP_THRESH(0.12) 且 Top1 < 0.65 → Top1 降权 ×0.7

**2. 开机预热（WARMUP_FRAMES=10）：** 前 10 帧识别结果直接跳过，避免相机初始化阶段的不稳定帧。

**3. 连续帧确认（StabilityStateMachine）：**
- TRACKING 状态下，每帧收到 cls_idx 后检查是否与当前候选相同
- 同一张牌连续出现 CONSECUTIVE_THRESH(3) 帧 → 确认该牌，进入 COOLDOWN
- 中途换牌 → 切换候选，计数重置为 1
- 无效帧（cls_idx < 0）→ 冻结当前计数不重置
- 候选被排除时 → 自动从 Top2/3 中寻找下一个有效候选

**4. S_A ↔ JOKER 混淆修正（v28 保留）：**
- 当 Top1=S_A 且 S_A-JOKER 分差 < JOKER_GAP_THRESH(0.25) 时，交换两者 softmax 分值
- 同时检查 JOKER_B 和 JOKER_R，解决大小王被误识别为黑桃A 的问题

**5. JOKER_B Boost 机制（v29/v30 保留）：**
- JOKER_B softmax 分值 >= JOKER_B_DETECT_MIN(0.10) 时，乘以 1.3 放大
- Boost 后与 Top1 差距 >= JOKER_B_MAX_GAP(0.25) 则跳过（防误触发）
- 解决 JOKER_B 自身置信度过低、无法通过识别阈值的问题

**6. 单轮排除机制：**
- 确认一张牌后，该牌 idx 和 rank 加入排除集合
- COOLDOWN 期间（20 帧）排除集合有效，防止同一张牌被重复识别
- COOLDOWN 结束后清空排除集合，所有牌可重新被识别（适用于多张不同牌的连续检测）

#### 6.3.4 识别流程

```
每帧 softmax 输出
    ↓
预热检查（跳过前 10 帧）
    ↓
S_A ↔ JOKER 交换（如果 Top1=S_A 且分差 < 0.25）
    ↓
JOKER_B Boost（如果 >= 0.10 且差距合理）
    ↓
重新排序取 Top1/2/3
    ↓
四关过滤（BLANK / BLANK_GAP / MIN_CONF / TOP_GAP）
    ↓
TRACKING 状态 → 连续帧计数 → 达到 3 帧 → 确认 → 进入 COOLDOWN
COOLDOWN 状态 → 等待 20 帧 → 清空排除集合 → 回到 TRACKING
```

#### 6.3.5 与 v34 的区别

v16 回退版相比 v34 **移除**了以下复杂机制：
- 候选池加权积累（Top2 +0.5 / Top3 +0.3 权重投票）
- 花色总和分析 + 同色花色裁决
- 7 张难检牌专项优化（花色补偿、Top1 保护、低门槛确认）
- COOLDOWN 期间每帧检查候选池

**保留**了以下经过验证的优化：
- S_A ↔ JOKER 混淆修正（v28）
- JOKER_B Boost 机制（v29/v30）
- 中文花色分色显示（黑桃/梅花=黑，红桃/方块=红）

回退理由：v34 引入的多层补偿机制在实际测试中成功率反而不如 v16 的简单连续帧确认。简单的骨架更可靠。

### 6.4 串口协议（仅控制用）

STM32 ↔ K230 串口**仅用于控制 K230 的识别开始和停止**，不承载识别结果数据。

| 方向 | 消息 | 说明 |
|------|------|------|
| STM32 → K230 | `0x01` | START，开始识别记录 |
| STM32 → K230 | `0x02` | STOP，停止识别记录 |
| K230 → STM32 | `0xA1` | ACK START |
| K230 → STM32 | `0xA2` | ACK STOP |

> 识别结果由 K230 直接在 LCD 屏幕上显示，无需回传给 STM32。

---

## 7. 比赛流程实现

### 7.1 B题（基础题）流程

> **代码逻辑（2026-05-15 修正后）：** B题第一圈完成触发声光各1秒；第二圈完成后直接停车。K230仅在F题启用，B题全程不涉及K230通信。

```
上电 → READY
  │
  ├── K1: 切换稳定模式(S)/竞赛模式(C)
  ├── K2: 切换B题/F题（当前B题）
  │
  └── K3按下 → RUNNING
       │
       ├── 循迹行驶（PID控制）
       ├── 扑克牌遮线：保持遮线前角度沿圆弧行进（丢线保护）
       │
       ├── 第一圈完成（enc_total >= ONE_LAP_COUNT）
       │    ├── 蜂鸣器长响 1 秒
       │    ├── LED 长亮 1 秒
       │    └── 1 秒后自动关闭声光，继续行驶
       │
       └── 第二圈完成（enc_total >= ONE_LAP_COUNT×2）
            ├── 停车
            ├── 蜂鸣器短响 80ms
            ├── 切换 STANDBY 页面
            └── OLED 显示行驶距离（enc_total）和用时
```

**关键行为说明：**
- B题不发送 START/STOP 给 K230，K230保持静默
- 第一圈声光提示用于告知裁判第一圈已完成（计时结束）；第二圈完成后无声光提示，直接停车
- 丢线保护：遇到扑克牌遮线时，150ms 内保持遮线前角度；150ms~300ms 进入圆弧模式；300ms~500ms 降速找线；>600ms 停车报错

### 7.2 F题（发挥题）流程

> **代码逻辑（2026-05-15 修正后）：** F题第一圈完成即停止（仅跑一圈），同时发送 STOP 给 K230；K230停止识别后 LCD 显示最终识别结果。

```
上电 → READY
  │
  ├── K1: 切换稳定模式(S)/竞赛模式(C)
  ├── K2: 切换B题/F题（当前F题）
  │
  └── K3按下 → RUNNING
       │
       ├── BSP_UART_K230_SendStart() → K230开始识别
       ├── 循迹行驶（PID控制）
       ├── 扑克牌遮线：保持遮线前角度沿圆弧行进（丢线保护）
       ├── K230识别扑克牌（面朝上放置在路径上）
       │
       └── 第一圈完成（enc_total >= ONE_LAP_COUNT）
            ├── BSP_UART_K230_SendStop() → K230停止识别
            ├── LCD显示最终识别结果（面额/花色/JOKER）
            ├── 停车
            ├── 蜂鸣器短响 80ms
            ├── 切换 STANDBY 页面
            └── OLED 显示行驶距离（enc_total）和用时
```

**关键行为说明：**
- F题仅跑一圈，第一圈完成即停止，**不跑第二圈**
- K230 在第一圈行驶期间持续识别面朝上的扑克牌；K230发送 STOP 后停止识别并锁定最终结果
- F题无声光提示（第一圈无提示）；停车时蜂鸣器短响 80ms（上电提示音同款）
- 丢线保护：遇到扑克牌遮线时，150ms 内保持遮线前角度；150ms~300ms 进入圆弧模式；300ms~500ms 降速找线；>600ms 停车报错

### 7.3 关键安全机制

| 机制 | 实现位置 | 说明 |
|------|----------|------|
| 丢线超时停车 | `app_line.c` `s_lost_cnt` | >600ms 自动进入 ERROR 状态 |
| PWM 限幅 | `app_line.c` | 防止超过电机承受范围 |
| 最低速度保护 | `app_line.c` | PWM < 100 时强制置 100，防止死区 |
| 编码器溢出保护 | `app_line.c` | `ENC_TOTAL_MAX` 上限 |
| 电机方向保护 | `bsp_motor.c` | 初始化时 PWM=0，防止上电乱转 |

---

## 8. 调参指南

PID 参数在 `app_line.c` 编译期固定，共 4 组（B竞赛/B稳定/F竞赛/F稳定）。运行时通过 **K1** 在竞赛模式(C)和稳定模式(S)之间切换，OLED 第一行实时显示当前模式。

### 8.1 四组参数一览

| 参数组 | BASE_PWM | KP | KI | KD | 适用场景 |
|--------|----------|----|----|-----|----------|
| B题 竞赛(C) | 1300 | 11.2 | 0.5 | 6.0 | 基础题高速 |
| B题 稳定(S) | 1000 | 8.5 | 0.5 | 4.5 | 基础题保守 |
| F题 竞赛(C) | 700 | 6.0 | 0.3 | 4.0 | 发挥题 K230 识别 |
| F题 稳定(S) | 630 | 5.7 | 0.0 | 4.0 | 发挥题保守 |

> 参数内部扩大 10 倍存储（int16_t），代码中显示值 = 存储值 / 10.0。

### 8.2 修改参数

直接修改 `app_line.c` 中的宏定义（竞赛参数）和 `s_stable_params[]` 数组（稳定参数），重新编译下载。

**调参顺序建议：**
1. `BASE_PWM=600`，`KP=10`，`KD=0` — 小车能缓慢启动
2. 只调 `KP`，每次 ±0.5~1.0，直到直线轻微摆动
3. 加 `KD`，每次 ±0.5~1.0，直到摆动减小
4. 逐步提高 `BASE_PWM`，不要一开始就追求速度
5. F题比 B题慢约 50%，给 K230 留足识别时间 |

---

## 9. 赛前检查清单

| 序号 | 检查项 | 状态 |
|------|--------|------|
| 1 | 电池已充电 | 待检查 |
| 2 | 车架螺丝紧固 | 待检查 |
| 3 | VM 飞线连接可靠 | 待检查 |
| 4 | 车轮不摩擦车架/线束 | 待检查 |
| 5 | STM32 可正常烧录 | 待检查 |
| 6 | 按键全部正确响应 | 待检查 |
| 7 | 蜂鸣器正常 | 待检查 |
| 8 | 双电机方向正确 | 待检查 |
| 9 | 编码器方向正确 | 待检查 |
| 10 | 灰度误差方向正确 | 待检查 |
| 11 | ONE_LAP_COUNT 实测标定 | **重要！需实测** |
| 12 | 低速循迹一圈稳定 | 待检查 |
| 13 | 丢线短时间保护有效 | 待检查 |
| 14 | 两圈自动停车正常（B题） | 待检查 |
| 15 | 一圈自动停车正常（F题） | 待检查 |
| 16 | K230 识别 + 串口 START/STOP 控制 | 待检查 |
| 17 | OLED 信息显示正确 | 待检查 |
| 18 | K230 LCD 中文显示识别结果 | 待检查 |

---

## 10. 待完成功能

### 高优先级

| 功能 | 说明 | 涉及文件 |
|------|------|----------|
| **ONE_LAP_COUNT 实测标定** | 让小车跑一圈，记录 OLED 显示的 enc_total 值，填入 `user_config.h` | `user_config.h` |

### 中优先级

| 功能 | 说明 | 涉及文件 |
|------|------|----------|
| K230 与 STM32 联合调试 | F题流程联调，确保一圈后 K230 停止识别、STM32 停车 | 全系统 |
| B题第二圈声光提示后继续循迹 | B题第一圈声光提示后，继续循迹至第二圈完成 | `app_line.c` |
| K230 LCD 识别结果界面优化 | 当前为白屏打印文字，可扩展为更美观的界面 | `K230/main.py` |

---

## 附录 A：串口调试命令

| 命令 | 功能 |
|------|------|
| `motor l 500` | 左电机正转 500 |
| `motor r -300` | 右电机反转 300 |
| `motor stop` | 两电机 stop |
| `enc` | 打印编码器值 |
| `gray` | 打印灰度值 |
| `i2cscan` | I2C 地址扫描 |
| `state` | 打印当前状态机状态 |

---

## 附录 B：代码版本记录

| 文件 | 版本 | 日期 | 说明 |
|------|------|------|------|
| 所有STM32 .c/.h文件 | 3.0 | 2026-05-21 | 全面整理：删除死代码、修正注释、统一版本 |
| `K230/main.py` | 3.0 | 2026-05-21 | 版本升至3.0，v22算法不变 |
| `竞赛小车工程总说明书.md` | **v2.0** | 2026-05-17 | 全面审查通过，§6.3同步v16、按键/OLED/调参同步 |

---

## 文档维护说明

本文档是工程的唯一真相源。修改后请同步更新：
1. 代码源文件（保持最新状态）
2. `log.md`（记录每次修改内容）
3. `竞赛小车工程总说明书.md`（更新版本号和日期）
4. 本附录B（代码版本记录表）
